# devenv-templates

./: flake.nix
jupyter/: justfile  pyproject.toml
micromamba/: flake.nix
python/: justfile  pyproject.toml
