[project]
name = "<project-name>"
version = "0.1.0"
description = "<project-description>"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
]

[tool.setuptools]
packages = ["<src-dir>"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
